# mcp-on-vercel

./: LICENSE  README.md  bridge.py  package.json  pyproject.toml  requirements.txt  vercel.json
api/: hirestream_client.py  index.py  install.py  mcp_adapter.py
scripts/: test_client.py
