[project]
name = "mcp-on-vercel"
version = "0.1.0"
description = "Python MCP server running on Vercel Functions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.9.0,<2.0.0",
    "httpx>=0.25.0",
    "anyio>=4.0.0",
    "starlette>=0.27.0",
    "fastmcp>=2.5.1",
    "fastapi>=0.115.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "requests>=2.32.3",
    "ruff>=0.11.11",
]
